feat: re-impleneted addition of sync function by placing it in a seperate .cpp file in each src directory in order to better match the scheme for other functions defined seperately for each model

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -294,6 +294,7 @@ set(MODEL_SRC
         PdV.cpp
         reset_field.cpp
         revert.cpp
+        sync.cpp
         update_halo.cpp
         update_tile_halo_kernel.cpp
         viscosity.cpp)
